drivers: video: tegra: Restrict NvMap page coloring to 4K pagesize
64K pages are naturally colored. So restrict NvMap page coloring to only
4K pages.

Bug 200684520
Bug 200716236

Change-Id: I33ad4d5c9b85246e8315e94f91a0ada1b4dbec93
Signed-off-by: Ashish Mhetre <amhetre@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2510256
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: Sachin Nikam <snikam@nvidia.com>
Reviewed-by: Pritesh Raithatha <praithatha@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/video/tegra/nvmap/Kconfig
+++ b/drivers/video/tegra/nvmap/Kconfig
@@ -37,6 +37,7 @@ config NVMAP_PAGE_POOL_SIZE
 
 config NVMAP_COLOR_PAGES
 	bool "Color pages allocated"
+	depends on ARM64_4K_PAGES
 	default y
 	help
 	  Say Y here to enable page coloring.
