[t194][scr] update safety config to version 90
L1SS: remove TSC reg. Read Access from CCPLEX

- remove TSC Register Read Access from CCPLEX

scr updates needed for safety:

updated QSPI0/1 BLF control register owner
and write access to CCPLEX
SE1 BLF control register owner adn write acces
to TZ

Bug 3131304
Bug 200696465
bug 200620414

Change-Id: If69921f59fcb0e2c399a707c6f8f1a9ce42b217b
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t19x/common/+/2511423
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Dilan Lee <dilee@nvidia.com>
Reviewed-by: Jordan Nien <jnien@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: Dilan Lee <dilee@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/bct/scr/tegra194-mb1-bct-scr-cbb-mini-safety.cfg
+++ b/bct/scr/tegra194-mb1-bct-scr-cbb-mini-safety.cfg
@@ -12,9 +12,9 @@
 scr.major = 1;
 scr.minor = 0;
 
-# Chip version = 87;
+# Chip version = 90;
 # Platform version = 0;
-# Project version = 3;
+# Project version = 6;
 # SCR Section
 scr.0.6 = 0x3c001010; # APS_AST_SCR_AST_GBL_SEC_CONTROL_0
 scr.1.6 = 0x390003ff; # APS_AST_SCR_AST_HYP_SEC_CONTROL_0
@@ -1954,7 +1954,7 @@ scr.1934.4 = 0x3d0020ff; # TSA_NODE7_SCR_EC_SCR_0
 scr.1935.4 = 0x3d0020ff; # TSA_NODE8_SCR_EC_SCR_0
 scr.1936.4 = 0x3d0020ff; # TSA_NODE9_SCR_EC_SCR_0
 scr.1937.4 = 0x18000707; # USEC_CNTR_SCR_USECSCR_0
-scr.1938.4 = 0x18000183; # TSC_SCR_TSCSCR_0
+scr.1938.4 = 0x18000181; # TSC_SCR_TSCSCR_0
 scr.1939.6 = 0x1c001717; # WAKE_SCR_COAL_SCR_0
 scr.1940.6 = 0x1c001717; # WAKE_SCR_EVENT_CNTRL_SCR_0
 scr.1941.6 = 0x1c001717; # WAKE_SCR_EVENT_CNTRL_SCR_1
@@ -2461,7 +2461,7 @@ scr.2440.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVENC1_BLF_CONTROL_REGISTER_0
 scr.2441.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVJPG_BLF_CONTROL_REGISTER_0
 scr.2442.4 = 0x1800ffff; # CBB_CENTRAL_NOC_PVA0_CLUSTER_BLF_CONTROL_REGISTER_0
 scr.2443.4 = 0x1800ffff; # CBB_CENTRAL_NOC_PVA1_CLUSTER_BLF_CONTROL_REGISTER_0
-scr.2444.4 = 0x1800ffff; # CBB_CENTRAL_NOC_SE1_BLF_CONTROL_REGISTER_0
+scr.2444.4 = 0x380003ff; # CBB_CENTRAL_NOC_SE1_BLF_CONTROL_REGISTER_0
 scr.2445.4 = 0x1800ffff; # CBB_CENTRAL_NOC_SE2_BLF_CONTROL_REGISTER_0
 scr.2446.4 = 0x1800ffff; # CBB_CENTRAL_NOC_SE3_BLF_CONTROL_REGISTER_0
 scr.2447.4 = 0x1800ffff; # CBB_CENTRAL_NOC_SE4_BLF_CONTROL_REGISTER_0
@@ -2525,7 +2525,7 @@ scr.2504.4 = 0x1800b7b7; # CBB_CENTRAL_NOC_LIC_GTE1_BLF_CONTROL_REGISTER_0
 scr.2505.5 = 0x00000000; # CBB_CENTRAL_NOC_MIOBFM_BLF_CONTROL_REGISTER_0
 scr.2506.4 = 0x380047ff; # CBB_CENTRAL_NOC_MISC_BLF_CONTROL_REGISTER_0
 scr.2507.4 = 0x3d0020ff; # CBB_CENTRAL_NOC_MISC_ERR_COLLATOR_BLF_CONTROL_REGISTER_0
-scr.2508.4 = 0x180067ff; # CBB_CENTRAL_NOC_MSS_BLF_CONTROL_REGISTER_0
+scr.2508.4 = 0x1a0026ff; # CBB_CENTRAL_NOC_MSS_BLF_CONTROL_REGISTER_0
 scr.2509.5 = 0x390022ff; # CBB_CENTRAL_NOC_MSS_NVLINK_0_BLF_CONTROL_REGISTER_0
 scr.2510.5 = 0x390026ff; # CBB_CENTRAL_NOC_MSS_NVLINK_1_BLF_CONTROL_REGISTER_0
 scr.2511.5 = 0x390026ff; # CBB_CENTRAL_NOC_MSS_NVLINK_2_BLF_CONTROL_REGISTER_0
