--- a/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
@@ -593,5 +593,13 @@
 #endif
 		status = "disabled";
 	};
+
+	tegra_rtc: rtc@c2a0000 {
+		compatible = "nvidia,tegra18-rtc";
+		reg = <0x0 0x0c2a0000 0x0 0x00010000>;
+		interrupt-parent = <&tegra_pmc>;
+		interrupts = <73 IRQ_TYPE_LEVEL_HIGH>;
+		status = "disabled";
+	};
 };
 
