soc: t23x: update clock dt entries for ga10b
Updated gpu clock ids for t23x soc device tree.

1. TEGRA234_CLK_GPUSYS   -  clocking SYS_XBAR
                            fabric common for both GPCs.
2. TEGRA234_CLK_GPC0CLK  -  clocking for GPC0
3. TEGRA234_CLK_GPC1CLK  -  clocking for GPC1

Jira NVGPU-6707

Change-Id: I06d312521499fb5c778839550d5e74d528305d24
Signed-off-by: Seshendra Gadagottu <sgadagottu@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2511793
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
@@ -711,10 +711,11 @@
 		nvidia,host1x = <&host1x>;
 		access-vpr-phys;
 		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_GPU>;
-		clocks = <&bpmp_clks TEGRA234_CLK_GPC0CLK>,
-			<&bpmp_clks TEGRA234_CLK_GPU_PWR>,
+		clocks = <&bpmp_clks TEGRA234_CLK_GPUSYS>,
+			<&bpmp_clks TEGRA234_CLK_GPC0CLK>,
+			<&bpmp_clks TEGRA234_CLK_GPC1CLK>,
 			<&bpmp_clks TEGRA234_CLK_FUSE>;
-		clock-names = "gpu", "pwr", "fuse";
+		clock-names = "sysclk", "gpc0clk", "gpc1clk", "fuse";
 		resets = <&bpmp_resets TEGRA234_RESET_GPU>;
 		dma-coherent;
 		status = "disabled";
