soc: pwm: Add CLK_PLLP_OUT0 and CLK_M for PWM1, 5 and 8
GOS0 needs to access CLK_PLLP_OUT0 and CLK_M for PWM1, PWM5 and PWM8.

bug 200715775

Change-Id: Id70b441da1b7a73a451356269a37c59e15e3ae0b
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2512281
(cherry picked from commit 3876aea2e318d6e2ddb9245ea04aa525dacef6b3)
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2515803
Tested-by: Bo Kim <bok@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Kurt Yi <kyi@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra194-soc/tegra194-soc-pwm.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-pwm.dtsi
@@ -19,8 +19,10 @@
 		compatible = "nvidia,tegra194-pwm", "nvidia,tegra186-pwm";
 		reg = <0x0 0x3280000 0x0 0x10000>;
 		nvidia,hw-instance-id = <0x0>;
-		clocks = <&bpmp_clks TEGRA194_CLK_PWM1>;
-		clock-names = "pwm";
+		clocks = <&bpmp_clks TEGRA194_CLK_PWM1>,
+		       <&bpmp_clks TEGRA194_CLK_PLLP_OUT0>,
+		       <&bpmp_clks TEGRA194_CLK_CLK_M>;
+		clock-names = "pwm", "parent", "slow-parent";
 		#pwm-cells = <2>;
 		resets = <&bpmp_resets TEGRA194_RESET_PWM1>;
 		reset-names = "pwm";
@@ -68,8 +70,10 @@
 		compatible = "nvidia,tegra194-pwm", "nvidia,tegra186-pwm";
 		reg = <0x0 0x32c0000 0x0 0x10000>;
 		nvidia,hw-instance-id = <0x4>;
-		clocks = <&bpmp_clks TEGRA194_CLK_PWM5>;
-		clock-names = "pwm";
+		clocks = <&bpmp_clks TEGRA194_CLK_PWM5>,
+		       <&bpmp_clks TEGRA194_CLK_PLLP_OUT0>,
+		       <&bpmp_clks TEGRA194_CLK_CLK_M>;
+		clock-names = "pwm", "parent", "slow-parent";
 		#pwm-cells = <2>;
 		resets = <&bpmp_resets TEGRA194_RESET_PWM5>;
 		reset-names = "pwm";
@@ -104,8 +108,10 @@
 		compatible = "nvidia,tegra194-pwm", "nvidia,tegra186-pwm";
 		reg = <0x0 0x32f0000 0x0 0x10000>;
 		nvidia,hw-instance-id = <0x7>;
-		clocks = <&bpmp_clks TEGRA194_CLK_PWM8>;
-		clock-names = "pwm";
+		clocks = <&bpmp_clks TEGRA194_CLK_PWM8>,
+		       <&bpmp_clks TEGRA194_CLK_PLLP_OUT0>,
+		       <&bpmp_clks TEGRA194_CLK_CLK_M>;
+		clock-names = "pwm", "parent", "slow-parent";
 		#pwm-cells = <2>;
 		resets = <&bpmp_resets TEGRA194_RESET_PWM8>;
 		reset-names = "pwm";
