--- a/arch/nvgpu-hal-vgpu.yaml
+++ b/arch/nvgpu-hal-vgpu.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2019, NVIDIA CORPORATION.  All Rights Reserved.
+# Copyright (c) 2019-2021, NVIDIA CORPORATION.  All Rights Reserved.
 #
 # VGPU HAL units.
 #
@@ -8,8 +8,6 @@ init:
   owner: Aparna D
   sources: [ hal/vgpu/init/init_hal_vgpu.c,
              hal/vgpu/init/init_hal_vgpu.h,
-             hal/vgpu/init/vgpu_hal_gp10b.c,
-             hal/vgpu/init/vgpu_hal_gp10b.h,
              hal/vgpu/init/vgpu_hal_gv11b.c,
              hal/vgpu/init/vgpu_hal_gv11b.h ]
 
