--- a/kernel-dts/tegra234-soc/tegra234-soc-coresight.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-coresight.dtsi
@@ -23,7 +23,7 @@
 		      <0x0 0x25000000 0x0 0x1000000>;
 		reg-names = "stm-base", "stm-stimulus-base";
 
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -41,7 +41,7 @@
 		reg = <0 0x27040000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@0}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -59,7 +59,7 @@
 		reg = <0 0x27140000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@1}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -77,7 +77,7 @@
 		reg = <0 0x27240000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@2}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -95,7 +95,7 @@
 		reg = <0 0x27340000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@3}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -113,7 +113,7 @@
 		reg = <0 0x27440000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@4}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -131,7 +131,7 @@
 		reg = <0 0x27540000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@5}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -149,7 +149,7 @@
 		reg = <0 0x27640000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@6}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -167,7 +167,7 @@
 		reg = <0 0x27740000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@7}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -185,7 +185,7 @@
 		reg = <0 0x27840000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@8}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -203,7 +203,7 @@
 		reg = <0 0x27940000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@9}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -221,7 +221,7 @@
 		reg = <0 0x27A40000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@10}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -239,7 +239,7 @@
 		reg = <0 0x27B40000 0 0x1000>;
 
 		cpu = <&{/cpus/cpu@11}>;
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -256,7 +256,7 @@
 		compatible = "arm,coresight-dynamic-funnel", "arm,primecell";
 		reg = <0x0 0x26030000 0x0 0x1000>;
 
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -312,7 +312,7 @@
 		compatible = "arm,coresight-dynamic-funnel", "arm,primecell";
 		reg = <0x0 0x26040000 0x0 0x1000>;
 
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -368,7 +368,7 @@
 		compatible = "arm,coresight-dynamic-funnel", "arm,primecell";
 		reg = <0x0 0x26050000 0x0 0x1000>;
 
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -424,7 +424,7 @@
 		compatible = "arm,coresight-dynamic-funnel", "arm,primecell";
 		reg = <0x0 0x26020000 0x0 0x1000>;
 
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -472,7 +472,7 @@
 		compatible = "arm,coresight-dynamic-funnel", "arm,primecell";
 		reg = <0x0 0x24040000 0x0 0x1000>;
 
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -513,7 +513,7 @@
 		compatible = "arm,coresight-static-replicator";
 		reg = <0x0 0x24060000 0x0 0x1000>;
 
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -546,7 +546,7 @@
 		reg = <0x0 0x24050000 0x0 0x1000>;
 		coresight-default-sink;
 
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
@@ -578,7 +578,7 @@
 		compatible = "arm,coresight-tmc", "arm,primecell";
 		reg = <0 0x24070000 0 0x1000>;
 
-		clocks = <&bpmp_clks TEGRA234_CLK_OSC>, <&bpmp_clks TEGRA234_CLK_CSITE>;
+		clocks = <&bpmp_clks TEGRA234_CLK_DBGAPB>, <&bpmp_clks TEGRA234_CLK_CSITE>;
 		clock-names = "apb_pclk", "atclk";
 		status = "disabled";
 
