--- a/arch/nvgpu-common.yaml
+++ b/arch/nvgpu-common.yaml
@@ -1054,7 +1054,19 @@ grmgr:
 cic:
   owner: Tejal K
   safe: yes
-  sources: [ include/nvgpu/nvgpu_cic.h ]
+  sources: [ common/cic/cic.c,
+             common/cic/ce_cic.c,
+             common/cic/ctxsw_cic.c,
+             common/cic/msg_cic.c,
+             common/cic/ecc_cic.c,
+             common/cic/host_cic.c,
+             common/cic/gr_cic.c,
+             common/cic/pri_cic.c,
+             common/cic/pmu_cic.c,
+             common/cic/mmu_cic.c,
+             common/cic/cic_priv.h,
+             include/nvgpu/gops/cic.h,
+             include/nvgpu/cic.h ]
 
 ##
 ## HAL units. Currently they are under common but this needs to change.
