--- a/drivers/gpu/nvgpu/Makefile.sources
+++ b/drivers/gpu/nvgpu/Makefile.sources
@@ -152,6 +152,16 @@ srcs +=	common/device.c \
 	common/rc/rc.c \
 	common/ce/ce.c \
 	common/grmgr/grmgr.c \
+	common/cic/cic.c \
+	common/cic/ce_cic.c \
+	common/cic/ctxsw_cic.c \
+	common/cic/ecc_cic.c \
+	common/cic/host_cic.c \
+	common/cic/gr_cic.c \
+	common/cic/pri_cic.c \
+	common/cic/pmu_cic.c \
+	common/cic/mmu_cic.c \
+	common/cic/msg_cic.c \
 	hal/init/hal_gv11b.c \
 	hal/init/hal_gv11b_litter.c \
 	hal/init/hal_init.c \
@@ -246,7 +256,9 @@ srcs += hal/mm/mm_gv11b_fusa.c \
 	hal/sync/syncpt_cmdbuf_gv11b_fusa.c \
 	hal/therm/therm_gv11b_fusa.c \
 	hal/top/top_gm20b_fusa.c \
-	hal/top/top_gv11b_fusa.c
+	hal/top/top_gv11b_fusa.c \
+	hal/cic/cic_gv11b_fusa.c \
+	hal/cic/cic_lut_gv11b_fusa.c
 
 # Source files below are not guaranteed to be functionaly safe (FuSa) and are
 # only included in the normal build.
