video: tegra: host: tsec risc-v boot support
Added risc-v boot support for TSEC.

Programming sequence:
- Selects risc-v core
- Reads desc.bin for offset information
- Programs DMA registers with start address of manifest, code and data
- Configures DMA
- Allocates for BL args and passes this address by mailbox registers
- Kick start RISCV and let BR take over
- Checks the return code for success

This patch also supports risc-v non-secure boot for TSEC, where image.bin
lies in kernel memory instead of GSC.

Jira HOSTX-2795
Bug 200621168

Change-Id: I1206e2d41e0d8bf90cd35ae6729a6ee3aae28b7d
Signed-off-by: Santosh B S <santoshb@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-t23x/+/2519522
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/video/tegra/host/Makefile
+++ b/drivers/video/tegra/host/Makefile
@@ -2,13 +2,15 @@ ccflags-y += -I$(srctree.nvidia)/drivers/video/tegra/host
 ccflags-y += -I$(srctree.nvidia-t23x)/drivers/video/tegra/host
 
 nvhost-$(CONFIG_TEGRA_T23X_GRHOST) += \
-	t23x/t23x.o
+	t23x/t23x.o \
+	riscv/riscv.o
 
 nvhost-$(CONFIG_TEGRA_GRHOST_OFA) += ofa/ofa.o
 
 obj-y += pva/
 obj-y += nvdla/
 
-ifdef CONFIG_TEGRA_T23X_GRHOST
+ifeq ($(CONFIG_TEGRA_T23X_GRHOST),y)
 nvhost-$(CONFIG_TEGRA_GRHOST_VHOST) += vhost/vhost_t23x.o
+nvhost-$(CONFIG_TEGRA_GRHOST_TSEC) += tsec/tsec_t23x.o
 endif
