--- a/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
@@ -77,4 +77,106 @@
 		status = "disabled";
 		nvidia,dcs-enable = <0x1>;
 	};
+
+	ethernet@6910000 {
+		compatible = "nvidia,nvmgbe";
+		reg = <0x0 0x06910000 0x0 0x10000>, /* MGBE base */
+		      <0x0 0x069A0000 0x0 0x10000>, /* XPCS base */
+		      <0x0 0x069D0000 0x0 0x10000>; /* MACsec RM base */
+		reg-names = "mac-base", "xpcs-base", "macsec-base";
+		interrupts = 	<0 392 0x4>,	/* common */
+				<0 393 0x4>,	/* vm0 */
+				<0 394 0x4>,	/* vm1 */
+				<0 395 0x4>,	/* vm2 */
+				<0 396 0x4>,	/* vm3 */
+				<0 397 0x4>,	/* vm4 */
+				<0 398 0x4>,	/* MACsec non-secure intr */
+				<0 399 0x4>;	/* MACsec secure intr */
+		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
+				  "macsec-ns-irq", "macsec-s-irq";
+#if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
+		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
+#else
+		iommus = <&smmu TEGRA_SID_MGBE>;
+#endif
+		nvidia,num-dma-chans = <10>;
+		nvidia,dma-chans = <0 1 2 3 4 5 6 7 8 9>;
+		nvidia,num-mtl-queues = <10>;
+		nvidia,mtl-queues = <0 1 2 3 4 5 6 7 8 9>;
+		nvidia,tc-mapping = <0 1 2 3 4 5 6 7 0 1>;
+		/* Residual Queue can be any valid queue except RxQ0 */
+		nvidia,residual-queue = <1>;
+		nvidia,rxq_enable_ctrl = <2 2 2 2 2 2 2 2 2 2>;
+		nvidia,vm-irq-config = <&mgbe_vm_irq_config>;
+		nvidia,tx-queue-prio = <0 1 2 3 4 5 6 7 0 0>;
+		status = "disabled";
+	};
+
+	ethernet@6A10000 {
+		compatible = "nvidia,nvmgbe";
+		reg = <0x0 0x06A10000 0x0 0x10000>, /* MGBE base */
+		      <0x0 0x06AA0000 0x0 0x10000>, /* XPCS base */
+		      <0x0 0x06AD0000 0x0 0x10000>; /* MACsec RM base */
+		reg-names = "mac-base", "xpcs-base", "macsec-base";
+		interrupts = 	<0 400 0x4>,	/* common */
+				<0 401 0x4>,	/* vm0 */
+				<0 402 0x4>,	/* vm1 */
+				<0 403 0x4>,	/* vm2 */
+				<0 404 0x4>,	/* vm3 */
+				<0 405 0x4>,	/* vm4 */
+				<0 406 0x4>,	/* MACsec non-secure intr */
+				<0 407 0x4>;	/* MACsec secure intr */
+		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
+				  "macsec-ns-irq", "macsec-s-irq";
+#if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
+		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
+#else
+		iommus = <&smmu TEGRA_SID_MGBE>;
+#endif
+		nvidia,num-dma-chans = <10>;
+		nvidia,dma-chans = <0 1 2 3 4 5 6 7 8 9>;
+		nvidia,num-mtl-queues = <10>;
+		nvidia,mtl-queues = <0 1 2 3 4 5 6 7 8 9>;
+		nvidia,tc-mapping = <0 1 2 3 4 5 6 7 0 1>;
+		/* Residual Queue can be any valid queue except RxQ0 */
+		nvidia,residual-queue = <1>;
+		nvidia,rxq_enable_ctrl = <2 2 2 2 2 2 2 2 2 2>;
+		nvidia,vm-irq-config = <&mgbe_vm_irq_config>;
+		nvidia,tx-queue-prio = <0 1 2 3 4 5 6 7 0 0>;
+		status = "disabled";
+	};
+
+	ethernet@6B10000 {
+		compatible = "nvidia,nvmgbe";
+		reg = <0x0 0x06B10000 0x0 0x10000>, /* MGBE base */
+		      <0x0 0x06BA0000 0x0 0x10000>, /* XPCS base */
+		      <0x0 0x06BD0000 0x0 0x10000>; /* MACsec RM base */
+		reg-names = "mac-base", "xpcs-base", "macsec-base";
+		interrupts = 	<0 408 0x4>,	/* common */
+				<0 409 0x4>,	/* vm0 */
+				<0 410 0x4>,	/* vm1 */
+				<0 411 0x4>,	/* vm2 */
+				<0 412 0x4>,	/* vm3 */
+				<0 413 0x4>,	/* vm4 */
+				<0 414 0x4>,	/* MACsec non-secure intr */
+				<0 415 0x4>;	/* MACsec secure intr */
+		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
+				  "macsec-ns-irq", "macsec-s-irq";
+#if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
+		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
+#else
+		iommus = <&smmu TEGRA_SID_MGBE>;
+#endif
+		nvidia,num-dma-chans = <10>;
+		nvidia,dma-chans = <0 1 2 3 4 5 6 7 8 9>;
+		nvidia,num-mtl-queues = <10>;
+		nvidia,mtl-queues = <0 1 2 3 4 5 6 7 8 9>;
+		nvidia,tc-mapping = <0 1 2 3 4 5 6 7 0 1>;
+		/* Residual Queue can be any valid queue except RxQ0 */
+		nvidia,residual-queue = <1>;
+		nvidia,rxq_enable_ctrl = <2 2 2 2 2 2 2 2 2 2>;
+		nvidia,vm-irq-config = <&mgbe_vm_irq_config>;
+		nvidia,tx-queue-prio = <0 1 2 3 4 5 6 7 0 0>;
+		status = "disabled";
+	};
 };
