--- a/arch/arm64/configs/tegra_defconfig_debug.config
+++ b/arch/arm64/configs/tegra_defconfig_debug.config
@@ -1,5 +1,1 @@
-CONFIG_DEBUG_RT_MUTEXES=y
-CONFIG_DEBUG_SPINLOCK=y
-CONFIG_LOG_BUF_SHIFT=18
-CONFIG_PM_ADVANCED_DEBUG=y
-CONFIG_PM_DEBUG=y
+defconfig_debug.config
