--- a/kernel-dts/tegra234-soc/tegra234-soc-pwm.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-pwm.dtsi
@@ -19,10 +19,12 @@
 		compatible = "nvidia,tegra194-pwm";
 		reg = <0x0 0x3280000 0x0 0x10000>;
 		nvidia,hw-instance-id = <0x0>;
-		clocks = <&bpmp_clks TEGRA234_CLK_PWM1>;
-		clock-names = "pwm";
+		clocks = <&bpmp_clks TEGRA234_CLK_PWM1>,
+		       <&bpmp_clks TEGRA234_CLK_PLLP_OUT0>,
+		       <&bpmp_clks TEGRA234_CLK_CLK_M>;
+		clock-names = "pwm", "parent", "slow-parent";
 		#pwm-cells = <2>;
-		resets = <&bpmp_resets TEGRA194_RESET_PWM1>;
+		resets = <&bpmp_resets TEGRA234_RESET_PWM1>;
 		reset-names = "pwm";
 		status = "disabled";
 	};
@@ -34,7 +36,7 @@
 		clocks = <&bpmp_clks TEGRA234_CLK_PWM2>;
 		clock-names = "pwm";
 		#pwm-cells = <2>;
-		resets = <&bpmp_resets TEGRA194_RESET_PWM2>;
+		resets = <&bpmp_resets TEGRA234_RESET_PWM2>;
 		reset-names = "pwm";
 		status = "disabled";
 	};
@@ -46,7 +48,7 @@
 		clocks = <&bpmp_clks TEGRA234_CLK_PWM3>;
 		clock-names = "pwm";
 		#pwm-cells = <2>;
-		resets = <&bpmp_resets TEGRA194_RESET_PWM3>;
+		resets = <&bpmp_resets TEGRA234_RESET_PWM3>;
 		reset-names = "pwm";
 		status = "disabled";
 	};
@@ -55,10 +57,11 @@
 		compatible = "nvidia,tegra194-pwm";
 		reg = <0x0 0xc340000 0x0 0x10000>;
 		nvidia,hw-instance-id = <0x3>;
-		clocks = <&bpmp_clks TEGRA234_CLK_PWM4>;
-		clock-names = "pwm";
+		clocks = <&bpmp_clks TEGRA234_CLK_PWM4>,
+			<&bpmp_clks TEGRA234_CLK_PLLAON>;
+		clock-names = "pwm", "pll_aon";
 		#pwm-cells = <2>;
-		resets = <&bpmp_resets TEGRA194_RESET_PWM4>;
+		resets = <&bpmp_resets TEGRA234_RESET_PWM4>;
 		reset-names = "pwm";
 		status = "disabled";
 	};
@@ -67,10 +70,12 @@
 		compatible = "nvidia,tegra194-pwm";
 		reg = <0x0 0x32c0000 0x0 0x10000>;
 		nvidia,hw-instance-id = <0x4>;
-		clocks = <&bpmp_clks TEGRA234_CLK_PWM5>;
-		clock-names = "pwm";
+		clocks = <&bpmp_clks TEGRA234_CLK_PWM5>,
+		       <&bpmp_clks TEGRA234_CLK_PLLP_OUT0>,
+		       <&bpmp_clks TEGRA234_CLK_CLK_M>;
+		clock-names = "pwm", "parent", "slow-parent";
 		#pwm-cells = <2>;
-		resets = <&bpmp_resets TEGRA194_RESET_PWM5>;
+		resets = <&bpmp_resets TEGRA234_RESET_PWM5>;
 		reset-names = "pwm";
 		status = "disabled";
 	};
@@ -82,7 +87,7 @@
 		clocks = <&bpmp_clks TEGRA234_CLK_PWM6>;
 		clock-names = "pwm";
 		#pwm-cells = <2>;
-		resets = <&bpmp_resets TEGRA194_RESET_PWM6>;
+		resets = <&bpmp_resets TEGRA234_RESET_PWM6>;
 		reset-names = "pwm";
 		status = "disabled";
 	};
@@ -94,7 +99,7 @@
 		clocks = <&bpmp_clks TEGRA234_CLK_PWM7>;
 		clock-names = "pwm";
 		#pwm-cells = <2>;
-		resets = <&bpmp_resets TEGRA194_RESET_PWM7>;
+		resets = <&bpmp_resets TEGRA234_RESET_PWM7>;
 		reset-names = "pwm";
 		status = "disabled";
 	};
@@ -103,10 +108,12 @@
 		compatible = "nvidia,tegra194-pwm";
 		reg = <0x0 0x32f0000 0x0 0x10000>;
 		nvidia,hw-instance-id = <0x7>;
-		clocks = <&bpmp_clks TEGRA234_CLK_PWM8>;
-		clock-names = "pwm";
+		clocks = <&bpmp_clks TEGRA234_CLK_PWM8>,
+		       <&bpmp_clks TEGRA234_CLK_PLLP_OUT0>,
+		       <&bpmp_clks TEGRA234_CLK_CLK_M>;
+		clock-names = "pwm", "parent", "slow-parent";
 		#pwm-cells = <2>;
-		resets = <&bpmp_resets TEGRA194_RESET_PWM8>;
+		resets = <&bpmp_resets TEGRA234_RESET_PWM8>;
 		reset-names = "pwm";
 		status = "disabled";
 	};
