soc: mgbe: add MAC/XPCS resets
Bug 3288030

Change-Id: I8d14421e92cf667f27b0470a0cd69f0dd9d7a6bb
Signed-off-by: Bhadram Varka <vbhadram@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2522195
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Mahesh Patil <maheshp@nvidia.com>
Reviewed-by: Narayan Reddy <narayanr@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
@@ -59,6 +59,9 @@
 				<0 391 0x4>;	/* MACsec secure intr */
 		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
 				  "macsec-ns-irq", "macsec-s-irq";
+		resets = <&bpmp_resets TEGRA234_RESET_MGBE0_MAC>,
+			 <&bpmp_resets TEGRA234_RESET_MGBE0_PCS>;
+		reset-names = "mac_rst", "xpcs_rst";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
 #else
@@ -94,6 +97,9 @@
 				<0 399 0x4>;	/* MACsec secure intr */
 		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
 				  "macsec-ns-irq", "macsec-s-irq";
+		resets = <&bpmp_resets TEGRA234_RESET_MGBE1_MAC>,
+			 <&bpmp_resets TEGRA234_RESET_MGBE1_PCS>;
+		reset-names = "mac_rst", "xpcs_rst";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
 #else
@@ -128,6 +134,9 @@
 				<0 407 0x4>;	/* MACsec secure intr */
 		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
 				  "macsec-ns-irq", "macsec-s-irq";
+		resets = <&bpmp_resets TEGRA234_RESET_MGBE2_MAC>,
+			 <&bpmp_resets TEGRA234_RESET_MGBE2_PCS>;
+		reset-names = "mac_rst", "xpcs_rst";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
 #else
@@ -162,6 +171,9 @@
 				<0 415 0x4>;	/* MACsec secure intr */
 		interrupt-names = "common", "vm0", "vm1", "vm2", "vm3", "vm4",
 				  "macsec-ns-irq", "macsec-s-irq";
+		resets = <&bpmp_resets TEGRA234_RESET_MGBE3_MAC>,
+			 <&bpmp_resets TEGRA234_RESET_MGBE3_PCS>;
+		reset-names = "mac_rst", "xpcs_rst";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_MGBE>;
 #else
