soc: t19x: kernel-dts: fix typo in qspi dt property
Fix the typo in dummy cycle property in qspi device node.

Bug 200663387

Change-Id: I8f3cd4d8c03e1ff0d88f35b7aab13105170b1366
Signed-off-by: Vishwaroop A <va@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2522227
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra194-soc/tegra194-soc-automotive.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-automotive.dtsi
@@ -170,9 +170,9 @@
 			controller-data {
 				nvidia,x1-len-limit = <16>;
 				nvidia,x1-bus-speed = <102000000>; /* In MHz */
-				nvidia,x1-dymmy-cycle = <8>;
+				nvidia,x1-dummy-cycle = <8>;
 				nvidia,x4-bus-speed = <102000000>;
-				nvidia,x4-dymmy-cycle = <8>;
+				nvidia,x4-dummy-cycle = <8>;
 				nvidia,x4-is-ddr=<1>;
 				nvidia,ctrl-bus-clk-ratio = <2>;
 			};
@@ -195,9 +195,9 @@
 			controller-data {
 				nvidia,x1-len-limit = <16>;
 				nvidia,x1-bus-speed = <102000000>; /* In MHz */
-				nvidia,x1-dymmy-cycle = <8>;
+				nvidia,x1-dummy-cycle = <8>;
 				nvidia,x4-bus-speed = <102000000>;
-				nvidia,x4-dymmy-cycle = <8>;
+				nvidia,x4-dummy-cycle = <8>;
 				nvidia,x4-is-ddr=<1>;
 				nvidia,ctrl-bus-clk-ratio = <2>;
 			};
