soc: t23x: Assign correct HDA Clock IDs
The clock architecture and IDs got changed for T23x for HDA
module. Fix the dts nodes to reflect correct HDA clock IDs
for the usage by drivers.

TEGRA234_CLK_AZA_2XBIT: Used for AZA core, 2xbitclk, fpci, ipfs (108MHz)
TEGRA234_CLK_AZA_BIT: Used for HDA link, bitclk (54MHz)

Bug 200613795

Change-Id: I14633c92f5a3ddf2d535b3b179f10dc20d368cb1
Signed-off-by: Mohan Kumar <mkumard@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2522789
Reviewed-by: Sameer Pujar <spujar@nvidia.com>
Reviewed-by: Sivaram Nair <sivaramn@nvidia.com>
Reviewed-by: Viswanath L <viswanathl@nvidia.com>
Reviewed-by: Sharad Gupta <sharadg@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
@@ -419,10 +419,9 @@
                 iommus = <&smmu TEGRA_SID_HDA>;
 #endif
                 reg = <0x0 0x3510000 0x0 0x10000>;
-                clocks = <&bpmp_clks TEGRA234_CLK_HDA>,
-                         <&bpmp_clks TEGRA234_CLK_HDA2CODEC_2X>,
-                         <&bpmp_clks TEGRA234_CLK_HDA2HDMICODEC>;
-                clock-names = "hda", "hda2codec_2x", "hda2hdmi";
+                clocks = <&bpmp_clks TEGRA234_CLK_AZA_2XBIT>,
+                         <&bpmp_clks TEGRA234_CLK_AZA_BIT>;
+		clock-names = "hda", "hda2codec_2x";
                 interrupts = <0 60 0x04>;
                 status = "okay";
         };
