--- a/kernel-dts/tegra234-soc/tegra234-soc-audio.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-audio.dtsi
@@ -733,10 +733,9 @@
 		iommus = <&smmu TEGRA_SID_HDA>;
 #endif
 		reg = <0x0 0x3510000 0x0 0x10000>;
-		clocks = <&bpmp_clks TEGRA234_CLK_HDA>,
-			 <&bpmp_clks TEGRA234_CLK_HDA2CODEC_2X>,
-			 <&bpmp_clks TEGRA234_CLK_HDA2HDMICODEC>;
-		clock-names = "hda", "hda2codec_2x", "hda2hdmi";
+		clocks = <&bpmp_clks TEGRA234_CLK_AZA_2XBIT>,
+			 <&bpmp_clks TEGRA234_CLK_AZA_BIT>;
+		clock-names = "hda", "hda2codec_2x";
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		interconnects = <&mc TEGRA234_MEMORY_CLIENT_HDAR>,
 				<&mc TEGRA234_MEMORY_CLIENT_HDAW>;
