bct: src: update auto-spi1_5_2_1-v90.0.6
Bug 3284256

Change-Id: I59e27139c8d663e0face840b07aa0d35919a907f
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t19x/common/+/2523602
Tested-by: Nagesh G S <ngs@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Dilan Lee <dilee@nvidia.com>
Reviewed-by: Sumeet Gupta <sumeetg@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/bct/scr/tegra194-mb1-bct-scr-cbb-mini-spi1-to-tz.cfg
+++ b/bct/scr/tegra194-mb1-bct-scr-cbb-mini-spi1-to-tz.cfg
@@ -1,7 +1,7 @@
 #
 # t194_cbb.cfg
 #
-# Copyright (c) 2017 - 2020, NVIDIA Corporation. All Rights Reserved.
+# Copyright (c) 2017 - 2021, NVIDIA Corporation. All Rights Reserved.
 #
 # NVIDIA Corporation and its licensors retain all intellectual property
 # and proprietary rights in and to this software and related documentation
@@ -14,7 +14,7 @@ scr.minor = 0;
 
 # Chip version = 90;
 # Platform version = 0;
-# Project version = 5;
+# Project version = 6;
 # SCR Section
 scr.0.6 = 0x3c001010; # APS_AST_SCR_AST_GBL_SEC_CONTROL_0
 scr.1.6 = 0x390003ff; # APS_AST_SCR_AST_HYP_SEC_CONTROL_0
@@ -48,37 +48,37 @@ scr.28.7 = 0x3c001010; # GPCDMA_AO_SCR_SCR_DMA_RO_0
 scr.29.7 = 0x3c001010; # GPCDMA_AO_SCR_SCR_HYPER_0
 scr.30.7 = 0x00000000; # GPCDMA_AO_SCR_SCR_TZ_0
 scr.31.7 = 0x3d0020ff; # AONCLUSTER_ERROR_COLLATOR_SCR_EC_SCR_0
-scr.32.6 = 0x1800ffff; # GPIO_AA_SCR_00_0
-scr.33.6 = 0x1800ffff; # GPIO_AA_SCR_01_0
-scr.34.6 = 0x1800ffff; # GPIO_AA_SCR_02_0
-scr.35.6 = 0x1800ffff; # GPIO_AA_SCR_03_0
-scr.36.6 = 0x1800ffff; # GPIO_AA_SCR_04_0
-scr.37.6 = 0x1800ffff; # GPIO_AA_SCR_05_0
-scr.38.6 = 0x1800ffff; # GPIO_AA_SCR_06_0
-scr.39.6 = 0x1800ffff; # GPIO_AA_SCR_07_0
-scr.40.6 = 0x1800ffff; # GPIO_AON_SCR_0
-scr.41.6 = 0x1800ffff; # GPIO_BB_SCR_00_0
-scr.42.6 = 0x1800ffff; # GPIO_BB_SCR_01_0
-scr.43.6 = 0x1800ffff; # GPIO_BB_SCR_02_0
-scr.44.6 = 0x1800ffff; # GPIO_BB_SCR_03_0
-scr.45.6 = 0x1800ffff; # GPIO_CC_SCR_00_0
-scr.46.6 = 0x1800ffff; # GPIO_CC_SCR_01_0
-scr.47.6 = 0x1800ffff; # GPIO_CC_SCR_02_0
-scr.48.6 = 0x1800ffff; # GPIO_CC_SCR_03_0
-scr.49.6 = 0x1800ffff; # GPIO_CC_SCR_04_0
-scr.50.6 = 0x1800ffff; # GPIO_CC_SCR_05_0
-scr.51.6 = 0x1800ffff; # GPIO_CC_SCR_06_0
-scr.52.6 = 0x1800ffff; # GPIO_CC_SCR_07_0
-scr.53.6 = 0x1800ffff; # GPIO_DD_SCR_00_0
-scr.54.6 = 0x1800ffff; # GPIO_DD_SCR_01_0
-scr.55.6 = 0x1800ffff; # GPIO_DD_SCR_02_0
-scr.56.6 = 0x1800ffff; # GPIO_EE_SCR_00_0
-scr.57.6 = 0x1800ffff; # GPIO_EE_SCR_01_0
-scr.58.6 = 0x1800ffff; # GPIO_EE_SCR_02_0
-scr.59.6 = 0x1800ffff; # GPIO_EE_SCR_03_0
-scr.60.6 = 0x1800ffff; # GPIO_EE_SCR_04_0
-scr.61.6 = 0x1800ffff; # GPIO_EE_SCR_05_0
-scr.62.6 = 0x1800ffff; # GPIO_EE_SCR_06_0
+scr.32.6 = 0x39000202; # GPIO_AA_SCR_00_0
+scr.33.6 = 0x39000202; # GPIO_AA_SCR_01_0
+scr.34.6 = 0x39000202; # GPIO_AA_SCR_02_0
+scr.35.6 = 0x39000202; # GPIO_AA_SCR_03_0
+scr.36.6 = 0x39000202; # GPIO_AA_SCR_04_0
+scr.37.6 = 0x39000202; # GPIO_AA_SCR_05_0
+scr.38.6 = 0x39000202; # GPIO_AA_SCR_06_0
+scr.39.6 = 0x39000202; # GPIO_AA_SCR_07_0
+scr.40.6 = 0x39000202; # GPIO_AON_SCR_0
+scr.41.6 = 0x39000202; # GPIO_BB_SCR_00_0
+scr.42.6 = 0x39000202; # GPIO_BB_SCR_01_0
+scr.43.6 = 0x39000202; # GPIO_BB_SCR_02_0
+scr.44.6 = 0x39000202; # GPIO_BB_SCR_03_0
+scr.45.6 = 0x39000202; # GPIO_CC_SCR_00_0
+scr.46.6 = 0x39000202; # GPIO_CC_SCR_01_0
+scr.47.6 = 0x39000202; # GPIO_CC_SCR_02_0
+scr.48.6 = 0x39000202; # GPIO_CC_SCR_03_0
+scr.49.6 = 0x39000202; # GPIO_CC_SCR_04_0
+scr.50.6 = 0x39000202; # GPIO_CC_SCR_05_0
+scr.51.6 = 0x39000202; # GPIO_CC_SCR_06_0
+scr.52.6 = 0x39000202; # GPIO_CC_SCR_07_0
+scr.53.6 = 0x39000202; # GPIO_DD_SCR_00_0
+scr.54.6 = 0x39000202; # GPIO_DD_SCR_01_0
+scr.55.6 = 0x39000202; # GPIO_DD_SCR_02_0
+scr.56.6 = 0x39000202; # GPIO_EE_SCR_00_0
+scr.57.6 = 0x39000202; # GPIO_EE_SCR_01_0
+scr.58.6 = 0x39000202; # GPIO_EE_SCR_02_0
+scr.59.6 = 0x39000202; # GPIO_EE_SCR_03_0
+scr.60.6 = 0x39000202; # GPIO_EE_SCR_04_0
+scr.61.6 = 0x39000202; # GPIO_EE_SCR_05_0
+scr.62.6 = 0x39000202; # GPIO_EE_SCR_06_0
 scr.63.6 = 0x3c001010; # GTE_GPIO_SCR_TEDSCR_0
 scr.64.6 = 0x3c001212; # GTE_GPIO_SCR_TESCR_0
 scr.65.4 = 0x1c001212; # HSP_INT_AON_SCR_SCR_C0_REG_0
@@ -2601,7 +2601,7 @@ scr.2580.6 = 0x38001313; # AON_NOC_AON_AST_0_BLF_CONTROL_REGISTER_0
 scr.2581.6 = 0x38001313; # AON_NOC_AON_AST_1_BLF_CONTROL_REGISTER_0
 scr.2582.6 = 0x3a000404; # AON_NOC_AON_ATCM_CFG_BLF_CONTROL_REGISTER_0
 scr.2583.6 = 0x3d0020ff; # AON_NOC_AON_ERR_COLLATOR_BLF_CONTROL_REGISTER_0
-scr.2584.6 = 0x1800ffff; # AON_NOC_AON_GPIO_0_BLF_CONTROL_REGISTER_0
+scr.2584.6 = 0x38000202; # AON_NOC_AON_GPIO_0_BLF_CONTROL_REGISTER_0
 scr.2585.6 = 0x1800ffff; # AON_NOC_AON_MSS_BLF_CONTROL_REGISTER_0
 scr.2586.6 = 0x3c0014ff; # AON_NOC_AOVC_BLF_CONTROL_REGISTER_0
 scr.2587.6 = 0x3a0024ff; # AON_NOC_ERR_COLLATOR_AON_CAR_BLF_CONTROL_REGISTER_0
