--- a/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
@@ -81,6 +81,7 @@
 #else
 		iommus = <&smmu TEGRA_SID_MGBE>;
 #endif
+		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_MGBEB>;
 		nvidia,num-dma-chans = <10>;
 		nvidia,dma-chans = <0 1 2 3 4 5 6 7 8 9>;
 		nvidia,num-mtl-queues = <10>;
@@ -133,6 +134,7 @@
 #else
 		iommus = <&smmu TEGRA_SID_MGBE>;
 #endif
+		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_MGBEBB>;
 		nvidia,num-dma-chans = <10>;
 		nvidia,dma-chans = <0 1 2 3 4 5 6 7 8 9>;
 		nvidia,num-mtl-queues = <10>;
@@ -184,6 +186,7 @@
 #else
 		iommus = <&smmu TEGRA_SID_MGBE>;
 #endif
+		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_MGBEBC>;
 		nvidia,num-dma-chans = <10>;
 		nvidia,dma-chans = <0 1 2 3 4 5 6 7 8 9>;
 		nvidia,num-mtl-queues = <10>;
@@ -235,6 +238,7 @@
 #else
 		iommus = <&smmu TEGRA_SID_MGBE>;
 #endif
+		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_MGBEA>;
 		nvidia,num-dma-chans = <10>;
 		nvidia,dma-chans = <0 1 2 3 4 5 6 7 8 9>;
 		nvidia,num-mtl-queues = <10>;
